--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="title_activity_admin_login">AdminLogin</string>
     <string name="pref_admin_logged_in">admin_logged_in</string>
     <string name="title_activity_about">About</string>
+    <string name="pref_logged_in">logged_in</string>
 
 </resources>
