--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="pref_admin_logged_in">admin_logged_in</string>
     <string name="title_activity_about">About</string>
     <string name="pref_logged_in">logged_in</string>
+    <string name="Username">Username</string>
 
 </resources>
